--- a/greenly/src/app/components/apiary-licence/apiary-licence.component.css
+++ b/greenly/src/app/components/apiary-licence/apiary-licence.component.css
@@ -19,8 +19,20 @@ h4::before {
     font-size: 16px;
 }
 
-.file {
-    border: 1px #177E39 dashed;
-    padding: 15px;
-}
+.custom-file-upload {
+    border: 1px dashed #177E39;
+    padding: 20px 30px;
+    cursor: pointer;
+    background-color: #f8f9fa;
+    color: #177E39;
+    font-weight: 500;
+    border-radius: 8px;
+    text-align: center;
+    width: 100%
+  }
+  
+  .custom-file-upload input[type="file"] {
+    display: none;
+  }
+  
 
