--- a/greenly/src/app/components/navbar/navbar.component.html
+++ b/greenly/src/app/components/navbar/navbar.component.html
@@ -1,45 +1,61 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary px-5">
-    <div class="container-fluid">
-      <h1 class="text-main special-font cursor-pointer ps-5">Greenly</h1>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav special-font-i mx-auto">
-          <li class="nav-item px-2">
-            <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/home" routerLinkActive="active-link">Home</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/shop" routerLinkActive="active-link">Shop</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/services" routerLinkActive="active-link">Services</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link cursor-pointer fw-bold">General Information</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/favorites" routerLinkActive="active-link">Favorites</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/blog" routerLinkActive="active-link">Blog</a>
-          </li>
-          <li class="nav-item px-2">
-            <a class="nav-link cursor-pointer fw-bold">Contact Us</a>
-          </li>
-        </ul>
-        @if(_AuthService.isLoggedIn()) {
-          <button class="btn-special rounded-3 px-3 py-1 rounded-5" type="button" routerLink="/app/user/user-profile"><img src="./assets/user-svgrepo-green-com.svg" width="30px" height="30px"/>Profile</button>
-          <button class="btn-special rounded-3 px-3 py-1 rounded-5 mx-2 position-relative" type="button" routerLink="/app/system/cart">
-            <span class="bg-main position-absolute cart-counter">{{cartCounter}}</span>
-            <img src="./assets/cart-plus-svgrepo-com.svg" width="30px" height="30px"/>Cart
-          </button>
-          <button class="btn btn-success rounded-3 px-3" type="button" routerLink="/app/system/home" (click)="logOut()">Log Out<img src="./assets/logout-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
-        }@else{
-          <div class="nav-buttons me-4">
-            <button class="btn btn-success rounded-3 px-3 py-1" type="button" routerLink="/app/system/login">Log In <img src="./assets/arrow-up-right-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
-        </div>
-        }
+  <div class="container-fluid">
+    <div class="d-flex justify-content-center align-items-center cursor-pointer" routerLink="/app/system/home">
+      <div class="">
+        <img src="./assets/tree-svgrepo-com.svg" alt="greenly-logo" width="70px" height="70px">
       </div>
+      <h1 class="text-main special-font cursor-pointer">Greenly</h1>
     </div>
-  </nav>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav special-font-i mx-auto">
+        <li class="nav-item px-2">
+          <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/home"
+            routerLinkActive="active-link">Home</a>
+        </li>
+        <li class="nav-item px-2">
+          <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/shop"
+            routerLinkActive="active-link">Shop</a>
+        </li>
+        <li class="nav-item px-2">
+          <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/services"
+            routerLinkActive="active-link">Services</a>
+        </li>
+        <li class="nav-item px-2">
+          <a class="nav-link cursor-pointer fw-bold">General Information</a>
+        </li>
+        <li class="nav-item px-2">
+          <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/favorites"
+            routerLinkActive="active-link">Favorites</a>
+        </li>
+        <li class="nav-item px-2">
+          <a class="nav-link cursor-pointer fw-bold" routerLink="/app/system/blog"
+            routerLinkActive="active-link">Blog</a>
+        </li>
+        <li class="nav-item px-2">
+          <a class="nav-link cursor-pointer fw-bold">Contact Us</a>
+        </li>
+      </ul>
+      @if(_AuthService.isLoggedIn()) {
+      <button class="btn-special rounded-3 px-3 py-1 rounded-5" type="button" routerLink="/app/user/user-profile"><img
+          src="./assets/user-svgrepo-green-com.svg" width="30px" height="30px" />Profile</button>
+      <button class="btn-special rounded-3 px-3 py-1 rounded-5 mx-2 position-relative" type="button"
+        routerLink="/app/system/cart">
+        <span class="bg-main position-absolute cart-counter">{{cartCounter}}</span>
+        <img src="./assets/cart-plus-svgrepo-com.svg" width="30px" height="30px" />Cart
+      </button>
+      <button class="btn btn-success rounded-3 px-3" type="button" routerLink="/app/system/home" (click)="logOut()">Log
+        Out<img src="./assets/logout-svgrepo-com.svg" style="filter: invert(1);" width="25px" height="25px"></button>
+      }@else{
+      <div class="nav-buttons me-4">
+        <button class="btn btn-success rounded-3 px-3 py-1" type="button" routerLink="/app/system/login">Log In <img
+            src="./assets/arrow-up-right-svgrepo-com.svg" style="filter: invert(1);" width="25px"
+            height="25px"></button>
+      </div>
+      }
+    </div>
+  </div>
+</nav>
