--- a/greenly/src/app/components/apiary-licence/apiary-licence.component.html
+++ b/greenly/src/app/components/apiary-licence/apiary-licence.component.html
@@ -10,7 +10,7 @@
           </div>
           <div class="col-md-6 mb-3">
             <label class="form-label special-font fs-4">Phone Number</label>
-            <input type="tel" class="form-control border-success" formControlName="phone" placeholder="+20..." />
+            <input type="tel" class="form-control border-success" formControlName="phoneNumber" placeholder="+20..." />
           </div>
           <div class="col-md-6 mb-3">
             <label class="form-label special-font fs-4">Email</label>
@@ -38,7 +38,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <label class="form-label special-font fs-4">Surrounding plants type</label>
-            <select class="form-select border-success" formControlName="plants" aria-label="Select surrounding plants type">
+            <select class="form-select border-success" formControlName="plantsType" aria-label="Select surrounding plants type">
               <option disabled>Select plant type</option>
               <option value="Flowering Trees">Flowering Trees</option>
               <option value="Herbs">Herbs</option>
@@ -49,7 +49,7 @@
           
           <div class="col-md-4 mb-3">
             <label class="form-label special-font fs-4">Number of planned bee colonies</label>
-            <input type="number" class="form-control border-success" formControlName="beeColonies" placeholder="20000" />
+            <input type="number" class="form-control border-success" formControlName="numberOfColonies" placeholder="20000" />
           </div>
           <div class="col-md-12 mb-3">
             <label class="form-label special-font fs-4">Proposed work plan <span class="text-secondary">1500 characters maximum</span></label>
@@ -68,11 +68,11 @@
         <div class="row">
           <div class="col-md-6 mb-3">
             <label class="form-label special-font fs-4">National ID / Passport</label>
-            <input type="file" class="file form-control border-success bg-light" (change)="onFileChange($event, 'nationalID')" />
+            <input type="file" class="file form-control border-success bg-light" (change)="onFileChange($event, 'nationalId')" />
           </div>
           <div class="col-md-6 mb-3">
             <label class="form-label special-font fs-4">Beekeeping Experience Documents</label>
-            <input type="file" class="file form-control border-success bg-light" (change)="onFileChange($event, 'experienceDocs')" />
+            <input type="file" class="file form-control border-success bg-light" (change)="onFileChange($event, 'documents')" />
           </div>
         </div>
   
