--- a/greenly/src/app/components/blog/blog.component.html
+++ b/greenly/src/app/components/blog/blog.component.html
@@ -8,7 +8,7 @@
     <div class="container my-4">
       @if(blogData){
         <div class="row g-3 justify-content-center align-items-stretch d-flex flex-wrap">
-          @for (post of blogData.posts; track post._id) {
+          @for (post of blogData; track post._id) {
             <div class="col-md-6 d-flex">
               <div class="inner p-3 rounded-3 text-center w-100 d-flex flex-column justify-content-between">
                 <div class="d-flex align-items-center justify-content-between">
