--- a/greenly/src/app/components/user-profile/user-profile.component.html
+++ b/greenly/src/app/components/user-profile/user-profile.component.html
@@ -1,97 +1,119 @@
 <section>
     <div class="container py-5">
         <h1 class="special-font text-center">Profile</h1>
-        <div class="personal-info mb-3">
-            <div class="d-flex justify-content-between align-items-center my-4">
+        <div class="personal-info mb-5">
+            <div class="my-4">
                 <h4 class="text-main position-relative fs-5">Personal Information</h4>
-                <span class="special-font text-main cursor-pointer fs-5 text-decoration-underline">Edit Profile</span>
-            </div>              
-            <div class="row justify-content-center g-4">
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="userName" class="form-label fw-bold special-font fs-4">User Name</label>
-                        <input type="text" class="form-control" id="userName" placeholder="Seif">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3 position-relative">
-                        <span (click)="togglePasswordVisibility()"
-                            class="cursor-pointer position-absolute eye-password"><i class="fa-solid"
-                                [ngClass]="isPasswordVisible ? 'fa-eye-slash text-main' : 'fa-eye text-main'"></i></span>
-                        <label for="password" class="form-label fw-bold special-font fs-4">Password</label>
-                        <input [type]="isPasswordVisible ? 'text' : 'password'" class="form-control" id="password"
-                            placeholder="xYz123@s">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="mb-3">
-                        <label for="phoneNumber" class="form-label fw-bold special-font fs-4">Phone Number</label>
-                        <input type="tel" class="form-control" id="phoneNumber" placeholder="01xxxxxxxxx">
-                    </div>
-                </div>
             </div>
+            @if(personalInfo){
+            <form [formGroup]="personalInfoForm" (ngSubmit)="editPersonalInfo()">
+                <div class="row justify-content-center g-4">
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label for="userName" class="form-label fw-bold special-font fs-4">User Name</label>
+                            <input type="text" class="form-control" id="userName" [placeholder]="personalInfo.username"
+                                formControlName="userName">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="mb-3">
+                            <label for="phoneNumber" class="form-label fw-bold special-font fs-4">Phone Number</label>
+                            <input type="tel" class="form-control" id="phoneNumber" [placeholder]="personalInfo.phone"
+                                formControlName="phone">
+                        </div>
+                    </div>
+                </div>
+                <button class="btn btn-success py-2 px-2 d-block w-10 ms-auto">Update</button>
+            </form>
+            }
+        </div>
+        <div class="password my-5">
+            <div class="my-4">
+                <h4 class="text-main position-relative fs-5">Your Password span</h4>
+                <span class="text-secondary special-font">If you change your password you'll need to login again</span>
+            </div>
+            <form [formGroup]="updatePasswordForm" (ngSubmit)="editPassword()">
+                <div class="row justify-content-center g-4">
+                    <div class="col-md-6">
+                        <div class="mb-3 position-relative">
+                            <span (click)="togglePasswordVisibility('old')"
+                                class="cursor-pointer position-absolute eye-password">
+                                <i class="fa-solid"
+                                    [ngClass]="isPasswordVisible.old ? 'fa-eye-slash text-main' : 'fa-eye text-main'"></i>
+                            </span>
+                            <label for="oldPassword" class="form-label fw-bold special-font fs-4">Old Password</label>
+                            <input [type]="isPasswordVisible.old ? 'text' : 'password'" class="form-control"
+                                id="oldPassword" placeholder="xYz123@s" formControlName="oldPassword">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="mb-3 position-relative">
+                            <span (click)="togglePasswordVisibility('new')"
+                                class="cursor-pointer position-absolute eye-password">
+                                <i class="fa-solid"
+                                    [ngClass]="isPasswordVisible.new ? 'fa-eye-slash text-main' : 'fa-eye text-main'"></i>
+                            </span>
+                            <label for="newPassword" class="form-label fw-bold special-font fs-4">New Password</label>
+                            <input [type]="isPasswordVisible.new ? 'text' : 'password'" class="form-control"
+                                id="newPassword" placeholder="xYz123@s" formControlName="password">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="mb-3 position-relative">
+                            <span (click)="togglePasswordVisibility('confirm')"
+                                class="cursor-pointer position-absolute eye-password">
+                                <i class="fa-solid"
+                                    [ngClass]="isPasswordVisible.confirm ? 'fa-eye-slash text-main' : 'fa-eye text-main'"></i>
+                            </span>
+                            <label for="confirmPassword" class="form-label fw-bold special-font fs-4">Confirm
+                                Password</label>
+                            <input [type]="isPasswordVisible.confirm ? 'text' : 'password'" class="form-control"
+                                id="confirmPassword" placeholder="xYz123@s" formControlName="confirmPassword">
+                        </div>
+                    </div>
+                </div>
+                <button class="btn btn-success py-2 px-2 d-block w-10 ms-auto">Update</button>
+            </form>
         </div>
         <div class="user-posts mt-5 mb-3">
             <h4 class="text-main position-relative fs-5">My Posts</h4>
             <div class="row g-3 mt-3">
-                <div class="col-md-6">
-                    <div class="inner p-3 rounded-3 text-center position-relative">
-                        <div class="dropdown position-absolute m-2">
-                            <button class="btn fs-1 text-main btn-sm dropdown-toggle" type="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                ...
-                            </button>
-                            <ul class="dropdown-menu custom-dropdown-menu text-center">
-                                <li class="cursor-pointer border-bottom"><a class="dropdown-item">Edit <i class="fa-solid fa-pen text-success"></i></a></li>
-                                <li class="cursor-pointer"><a class="dropdown-item">Delete <i class="fa-solid fa-trash text-danger"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="d-flex align-items-center justify-content-between pe-5">
-                            <div class="user-info d-flex justify-content-center align-items-center gap-1">
-                                <div class=" fs-5">
-                                    <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img"
-                                        class="rounded-circle" width="30px" height="30px">
+                @for (post of blogData; track post._id) {
+                    <div class="col-md-6">
+                        <div class="inner p-3 rounded-3 text-center position-relative">
+                            <div class="dropdown position-absolute m-2">
+                                <button class="btn fs-1 text-main btn-sm dropdown-toggle" type="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    ...
+                                </button>
+                                <ul class="dropdown-menu custom-dropdown-menu text-center">
+                                    <li class="cursor-pointer" (click)="deletePost(post._id)"><a class="dropdown-item">Delete <i
+                                                class="fa-solid fa-trash text-danger"></i></a></li>
+                                </ul>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between pe-5">
+                                <div class="user-info d-flex justify-content-center align-items-center gap-1">
+                                    <div class=" fs-5">
+                                        <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img"
+                                            class="rounded-circle" width="30px" height="30px">
+                                    </div>
+                                    <h2 class="fs-6 pt-2  fw-semibold">{{post.createdBy.userName}}</h2>
                                 </div>
-                                <h2 class="fs-6 pt-2  fw-semibold">Seif Muhammed</h2>
+                                <div class="date">
+                                    <span class="pt-2 fw-semibold text-secondary">{{post.createdAt | date: "dd MMMM yyyy, hh:mm a"}}</span>
+                                </div>
                             </div>
-                            <div class="date">
-                                <span class="pt-2 fw-semibold text-secondary">Today</span>
+                            <div class="post-content my-3">
+                                <p>{{post.content.charAt(0).toUpperCase()+post.content.slice(1)}}</p>
                             </div>
-                        </div>
-                        <div class="post-content my-3">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni?</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="inner p-3 rounded-3 text-center position-relative">
-                        <div class="dropdown position-absolute m-2">
-                            <button class="btn fs-1 text-main btn-sm dropdown-toggle" type="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                ...
-                            </button>
-                            <ul class="dropdown-menu custom-dropdown-menu text-center">
-                                <li class="cursor-pointer border-bottom"><a class="dropdown-item">Edit <i class="fa-solid fa-pen text-success"></i></a></li>
-                                <li class="cursor-pointer"><a class="dropdown-item">Delete <i class="fa-solid fa-trash text-danger"></i></a></li>
-                            </ul>
-                        </div>
-                        <div class="d-flex align-items-center justify-content-between pe-5">
-                            <div class="user-info d-flex justify-content-center align-items-center gap-1">
-                                <div class=" fs-5">
-                                    <img src="./assets/user-circle-1-svgrepo-com.svg" alt="user-img"
-                                        class="rounded-circle" width="30px" height="30px">
-                                </div>
-                                <h2 class="fs-6 pt-2  fw-semibold">Seif Muhammed</h2>
-                            </div>
-                            <div class="date">
-                                <span class="pt-2 fw-semibold text-secondary">Today</span>
-                            </div>
-                        </div>
-                        <div class="post-content my-3">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, magni?</p>
-                        </div>
+                }@empty {
+                    <div class="text-center">
+                        <h3 class="fs-4 special-font text-danger">You haven't posted anything yet, let's get started with your first post!</h3>
+                        <button class="btn btn-success mt-3" routerLink="/app/system/blog">Go to Blog <i class="fa-solid fa-arrow-up-right-from-square"></i></button>
                     </div>
-                </div>
+                }
             </div>
         </div>
         <div class="user-orders mt-5">
